src/core/styles/components/grid/_grid-theme.scss
////
/// @group themes
/// @access public
/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
////

/// @param {Color} $header-background [null] - The table header background color.
/// @param {Color} $header-text-color [null] - The table header text color.
/// @param {Color} $resize-line-color [null] - The table header resize line color.
/// @param {Color} $content-background [null] - The table body background color.
/// @param {Color} $content-text-color [null] - The table body text color.
/// @param {Color} $row-border-color [null] - The row bottom border color.
/// @param {Color} $row-selected-background [null] - The selected row background color.
/// @param {Color} $row-selected-text-color [null] - The selected row text color.
/// @param {Color} $row-hover-background [null] - The hover row background color.
/// @param {Color} $cell-selected-background [null] - The selected cell background color.
/// @param {Color} $cell-selected-text-color [null] - The selected cell text color.
/// @requires text-contrast
@function igx-grid-theme(
    $header-background: null,
    $header-text-color: null,

    $content-background: null,
    $content-text-color: null,

    $row-selected-background: null,
    $row-selected-text-color: null,
    $row-hover-background: null,
    $row-border-color: null,

    $pinned-border-width: null,
    $pinned-border-style: null,
    $pinned-border-color: null,

    $cell-selected-background: null,
    $cell-selected-text-color: null,

    $resize-line-color: null
) {
    @if not($header-text-color) and $header-background {
        $header-text-color: text-contrast($header-background);
    }

    @if not($content-text-color) and $content-background {
        $content-text-color: text-contrast($content-background);
    }

    @if not($cell-selected-text-color) and $cell-selected-background {
        $cell-selected-text-color: text-contrast($cell-selected-background);
    }

    @if not($row-selected-text-color) and $row-selected-background {
        $row-selected-text-color: text-contrast($row-selected-background);
    }

    @if not($row-hover-background) and $content-background {
        $row-hover-background: rgba(text-contrast($content-background), .08)
    }

    @if not($row-border-color) and $content-background {
        $row-border-color: rgba(text-contrast($content-background), .08)
    }

    @if not($pinned-border-color) and $content-background {
        $pinned-border-color: rgba(text-contrast($content-background), .08)
    }

    @return (
        header-background: $header-background,
        header-text-color: $header-text-color,

        content-background: $content-background,
        content-text-color: $content-text-color,

        row-selected-background: $row-selected-background,
        row-selected-text-color: $row-selected-text-color,
        row-hover-background: $row-hover-background,
        row-border-color: $row-border-color,

        pinned-border-width: $pinned-border-width,
        pinned-border-style: $pinned-border-style,
        pinned-border-color: $pinned-border-color,

        cell-selected-background: $cell-selected-background,
        cell-selected-text-color: $cell-selected-text-color,

        resize-line-color: $resize-line-color
    );
}

/// @param {Map} $theme - The theme used to style the component.
/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
/// @requires igx-grid-theme
/// @requires igx-color
/// @requires igx-contrast-color
/// @requires igx-elevation
/// @requires $elevations
/// @requires extend
/// @requires rem
@mixin igx-grid($theme, $palette: $default-palette) {
    $default-theme: igx-grid-theme(
        $header-background: hexrgba(igx-color($palette, 'grays', 100)),
        $header-text-color: igx-color($palette, 'grays', 600),

        $content-background: #fff,
        $content-text-color: igx-color($palette, 'grays', 800),

        $row-selected-background: hexrgba(igx-color($palette, 'grays', 800)),
        $row-selected-text-color: igx-contrast-color($palette, 'grays', 900),
        $row-hover-background: hexrgba(igx-color($palette, 'grays', 100)),
        $row-border-color: igx-color($palette, 'grays', 300),

        $pinned-border-width: 2px,
        $pinned-border-style: solid,
        $pinned-border-color: igx-color($palette, 'grays', 400),

        $cell-selected-background: igx-color($palette, 'primary'),
        $cell-selected-text-color: igx-contrast-color($palette, 'primary'),

        $resize-line-color: igx-color($palette, 'secondary')
    );

    $this: extend($default-theme, $theme);

    // @debug $this;

    // General
    $grid-br: 2px;
    $grid-shadow: igx-elevation($elevations, 2);

    // Caption
    $grid-caption-fs: rem(20px);
    $grid-caption-lh: rem(32px);
    $grid-caption-padding: rem(16px) rem(24px);

    // Heading
    $grid-head-fs: rem(12px);
    $grid-head-fw: 600;

    // Cell
    $grid-cell-padding: rem(16px) rem(24px);
    $grid-cell-align-num: right;
    $grid-cell-fs: rem(13px);
    $grid-cell-lh: rem(16px);
    $grid-cell-pinned-style: 1px solid;
    $grid-cell-pinned-border-color: igx-color($palette, 'grays', 300);

    // Pinning
    $cell-pin: (
        style: map-get($this, 'pinned-border-width') map-get($this, 'pinned-border-style'),
        color: map-get($this, 'pinned-border-color')
    );

    %grid-display {
        display: grid;
        grid-template-rows: auto 1fr auto auto;
        grid-template-columns: 1fr;
        border-radius: $grid-br;
        box-shadow: $grid-shadow;
        outline-style: none;
        overflow: hidden;
    }

    %grid-caption {
        display: flex;
        align-items: center;
        font-size: $grid-caption-fs;
        line-height: $grid-caption-lh;
        padding: $grid-caption-padding;
    }

    %grid-thead,
    %grid-tfoot {
        position: relative;
        display: block;
        background: map-get($this, 'header-background');
        color: map-get($this, 'header-text-color');

        %grid-row {
            background: inherit;

            &:hover {
                background: inherit;
            }
        }
    }

    %grid-thead {
        grid-row: 1;
        border-bottom: 1px dotted igx-color($palette, 'grays', 400);
        z-index: 2;
    }

    %grid-tfoot {
        grid-row: 4;
        border-top: 1px dotted igx-color($palette, 'grays', 400);
    }

    %grid-display-container-thead {
        width: 100%;
        overflow: visible;
    }

    %grid-display-container-tr {
        width: 100%;
        overflow: visible;
    }

    %grid-tbody {
        position: relative;
        grid-row: 2;
        background: map-get($this, 'content-background');
        color: map-get($this, 'content-text-color');
        overflow: hidden;
        z-index: 1;
    }

    %grid-tbody--empty {
        display: flex;
        justify-content: center;
        text-align: center;
    }

    %grid-scroll {
        display: flex;
        flex-flow: row nowrap;
        grid-row: 5;
        width: 100%;
        background: map-get($this, 'header-background');
    }

    %grid-scroll-start {
        background: igx-color($palette, 'grays', 200);
    }

    %grid-scroll-main {
        igx-display-container {
            height: 0;
        }
    }

    %grid-row {
        display: flex;
        background-color: map-get($this, 'content-background');
        border-bottom: 1px solid map-get($this, 'row-border-color');
        outline-style: none;

        &:last-of-type {
            border-bottom: 0;
        }

        &:hover {
            background-color: map-get($this, 'row-hover-background');
        }
    }

    %grid-row--selected {
        color: map-get($this, 'row-selected-text-color');
        background-color: map-get($this, 'row-selected-background');

        &:hover {
            background-color: map-get($this, 'row-selected-background');
        }
    }

    %grid-cell-display {
        flex: 1 1 0%;
        outline-style: none;
        padding: $grid-cell-padding;
        font-size: $grid-cell-fs;
        line-height: $grid-cell-lh;
        color: inherit;
        text-align: left;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    %grid-cell--fixed-width {
        flex-grow: 0;
    }

    %grid-cell--selected {
        color: map-get($this, 'cell-selected-text-color');
        background-color: map-get($this, 'cell-selected-background') !important;
        border-bottom: 0;
    }

    %grid-cell--pinned {
        position: relative;
        background-color: inherit;
        z-index: 9999;
    }

    %grid-cell--pinned-last {
        border-right: map-get($cell-pin, 'style') map-get($cell-pin, 'color') !important;
    }

    %grid-cell-header {
        display: flex;
        position: relative;
        flex-flow: row nowrap;
        align-items: center;
        justify-content: space-between;
        font-size: $grid-head-fs;
        font-weight: $grid-head-fw;
        overflow: visible;
        min-width: 0;
        border-right: 1px dotted igx-color($palette, 'grays', 400);

        &:last-of-type {
            border-right: transparent;
        }
    }

    %grid-cell-header-title {
        @include ellipsis();
        user-select: none;
        cursor: initial;
        flex-grow: 1; /* hey IE, the text should take most of the space */
    }

    %grid-cell-header-icons {
        display: flex;
        align-items: center;
        user-select: none;
        height: 24px;

        .sort-icon {
            width: rem(15px);
            height: rem(15px);
            min-width: rem(15px); /* yeah IE, it really needs to be 15px wide... */
            font-size: rem(15px);
        }
    }

    %grid-cell-number {
        text-align: $grid-cell-align-num;

        %grid-cell-header-icons {
            order: -1;

            .sort-icon {
                order: 1;
            }
        }
    }

    %grid__cbx-selection {
        padding: 0 rem(24px);
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 1;
        position: relative;
        background: inherit;
    }

    %grid__resize-handle {
        position: absolute;
        width: 4px;
        top: 0;
        right: -2px;
        height: 100%;
        z-index: 2;
    }

    %grid__resize-line {
        position: absolute;
        cursor: col-resize;
        width: 4px;
        background-color: map-get($this, 'resize-line-color');
        z-index: 2;

        &::before,
        &::after {
            position: absolute;
            content: '';
            height: 100%;
            width: 96px;
        }

        &::before {
            right: 100%;
        }

        &::after {
            left: 100%;
        }
    }
}

